[project]
name = "holmesvau"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes==0.41.0",
    "deepspeed==0.13.5",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "huggingface-hub>=0.36.0",
    "imageio>=2.37.2",
    "matplotlib>=3.10.7",
    "numpy==1.26.2",
    "opencv-python>=4.11.0.86",
    "orjson>=3.11.4",
    "peft>=0.4.0",
    "pycocoevalcap>=1.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.2.2",
    "scipy>=1.16.3",
    "sentencepiece==0.1.99",
    "shortuuid>=1.0.13",
    "tensorboardx>=2.6.4",
    "termcolor>=3.2.0",
    "timm==0.9.12",
    "tokenizers==0.15.1",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "tqdm>=4.67.1",
    "transformers==4.37.2",
    "yacs>=0.1.8",
]
